Penguin Shop With TailWind

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!-- Customize CSS  -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- Tailwind CSS link  -->
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <title>Penguin Fashion</title>
 </head>
 
