Penguin Shop With TailWind

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Tailwind CSS link  -->
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!-- Website Title  -->
     <title>Penguin Fashion</title>
 </head>
 
