--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <!-- Website Title  -->
     <title>Penguin Fashion</title>
 
+    <!-- Fav Icon logo  -->
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
 </head>
 
 <body>
