--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
 
     <!-- Tailwind CSS link  -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
 
     <!-- Website Title  -->
     <title>Penguin Fashion</title>
