--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 
 <body>
 
+    <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
+        </span> <br> <span class="">of Winter</span></h1>
+
 </body>
 
 </html>
