--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 
 <body>
 
-    <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
+    <header>
+        <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
         </span> <br> <span class="">of Winter</span></h1>
-
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 
 </html>
