--- a/index.html
+++ b/index.html
@@ -34,10 +34,16 @@
 <body>
 
     <header>
-        <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
-        </span> <br> <span class="">of Winter</span></h1>
+        <section class="container mx-auto">
+            <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
+            </span> <br> <span class="">of Winter</span></h1>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt odit ad error repellat necessitatibus nemo, quisquam dicta reprehenderit iusto placeat.</p>
+            <button class="bg-[#A4BC46]">BUY NOW</button>
+        </section>
     </header>
+
     <main></main>
+
     <footer></footer>
 </body>
 
