--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
             </span> <br> <span class="">of Winter</span></h1>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt odit ad error repellat necessitatibus nemo, quisquam dicta reprehenderit iusto placeat.</p>
-            <button class="bg-[#A4BC46]">BUY NOW</button>
+            <button class="bg-[#A4BC46] py-5 px-7 text-white font-semibold">BUY NOW</button>
         </section>
     </header>
 
