--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 extend: {
                     colors: {
                         clifford: '#da373d',
+                        penguin: '#FFFBF0',
                     }
                 }
             }
@@ -34,7 +35,7 @@
 <body>
 
     <header>
-        <section class="container mx-auto flex">
+        <section class="container mx-auto flex items-center justify-around">
             <div class="space-y-4">
                 <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
                 </span> <br> <span class="">of Winter</span></h1>
