--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <body>
 
-    <header>
+    <header class="bg-penguin pb-32 pt-12">
         <section class="container mx-auto flex items-center justify-around">
             <div class="space-y-4">
                 <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
