--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
 
     <header class="bg-penguin pb-32 pt-12">
-        <section class="container mx-auto flex items-center justify-around">
+        <section class="container mx-auto sm:flex items-center justify-around">
             <div class="space-y-4">
                 <h1 class="text-5xl font-bold uppercase"><span class="text text-yellow-400">Be the Penguins
                 </span> <br> <span class="">of Winter</span></h1>
