--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     colors: {
                         clifford: '#da373d',
                         penguin: '#FFFBF0',
+                        price: '#FABE4C',
                     }
                 }
             }
@@ -50,7 +51,23 @@
         </section>
     </header>
 
-    <main></main>
+    <main>
+        <!-- Woman Jacket Section  -->
+        <section class="container mx-auto">
+            <h2 class="text-5xl font-bold">Woman Jacket</h2>
+            <div class="">
+                <img src="images/jacket-1.png" alt="">
+                <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum exercitationem distinctio.</p>
+                <div class="flex">
+                    <h3 class="text-5xl font-bold"><span class="text-price">$234</span></h3>
+                    <button class="bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-lg"> <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor">
+                        <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                      </svg>BUY NOW</button>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer></footer>
 </body>
