--- a/index.html
+++ b/index.html
@@ -55,15 +55,89 @@
         <!-- Woman Jacket Section  -->
         <section class="container mx-auto">
             <h2 class="text-5xl font-bold">Woman Jacket</h2>
-            <div class="">
-                <img src="images/jacket-1.png" alt="">
-                <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum exercitationem distinctio.</p>
-                <div class="flex">
-                    <h3 class="text-5xl font-bold"><span class="text-price">$234</span></h3>
-                    <button class="bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-lg"> <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor">
-                        <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
-                      </svg>BUY NOW</button>
+            <div class="grid grid-cols-3 gap-7">
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-lime-100 rounded-xl">
+                        <img src="images/jacket-1.png" alt="">
+                    </div>
+                    <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum exercitationem distinctio.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-5xl font-bold"><span class="text-price">$234</span></h3>
+                        <button class="bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-lg"> <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                          </svg>BUY NOW</button>
+                    </div>
+                </div>
+                <div class="p-4 shadow-lg  rounded-xl">
+                    <div class="p-5 bg-lime-100 rounded-xl">
+                        <img src="images/jacket-2.png" alt="">
+                    </div>
+                    <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum exercitationem distinctio.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-5xl font-bold"><span class="text-price">$234</span></h3>
+                        <button class="bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-lg"> <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                          </svg>BUY NOW</button>
+                    </div>
+                </div>
+                <div class="p-4 shadow-lg  rounded-xl">
+                    <div class="p-5 bg-lime-100 rounded-xl">
+                        <img src="images/jacket-3.png" alt="">
+                    </div>
+                    <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum exercitationem distinctio.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-5xl font-bold"><span class="text-price">$234</span></h3>
+                        <button class="bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-lg"> <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                          </svg>BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container mx-auto m-12">
+            <h2 class="text-5xl font-bold">Man Jacket</h2>
+            <div class="grid grid-cols-3 gap-7">
+                <div class="p-4 shadow-lg  rounded-xl">
+                    <div class="p-5 bg-lime-100 rounded-xl">
+                        <img src="images/jacket-4.png" alt="">
+                    </div>
+                    <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum exercitationem distinctio.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-5xl font-bold"><span class="text-price">$234</span></h3>
+                        <button class="bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-lg"> <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                          </svg>BUY NOW</button>
+                    </div>
+                </div>
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-lime-100 rounded-xl">
+                        <img src="images/jacket-5.png" alt="">
+                    </div>
+                    <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum exercitationem distinctio.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-5xl font-bold"><span class="text-price">$234</span></h3>
+                        <button class="bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-lg"> <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                          </svg>BUY NOW</button>
+                    </div>
+                </div>
+                <div class="p-4 shadow-lg rounded-xl">
+                    <div class="p-5 bg-lime-100 rounded-xl">
+                        <img src="images/jacket-6.png" alt="">
+                    </div>
+                    <h3 class="text-3xl font-semibold">Yellow Coat Jacket</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore laborum exercitationem distinctio.</p>
+                    <div class="flex justify-between">
+                        <h3 class="text-5xl font-bold"><span class="text-price">$234</span></h3>
+                        <button class="bg-[#A4BC46] py-4 px-7 text-white font-semibold rounded-lg"> <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 inline" viewBox="0 0 20 20" fill="currentColor">
+                            <path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" />
+                          </svg>BUY NOW</button>
+                    </div>
                 </div>
             </div>
         </section>
