--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Woman Jacket Section  -->
         <section class="container mx-auto">
             <h2 class="text-5xl font-bold">Woman Jacket</h2>
-            <div class="grid grid-cols-3 gap-7">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <div class="p-4 shadow-lg rounded-xl">
                     <div class="p-5 bg-lime-100 rounded-xl">
                         <img src="images/jacket-1.png" alt="">
@@ -99,7 +99,7 @@
         </section>
         <section class="container mx-auto m-12">
             <h2 class="text-5xl font-bold">Man Jacket</h2>
-            <div class="grid grid-cols-3 gap-7">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <div class="p-4 shadow-lg  rounded-xl">
                     <div class="p-5 bg-lime-100 rounded-xl">
                         <img src="images/jacket-4.png" alt="">
