--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <main>
         <!-- Woman Jacket Section  -->
-        <section class="container mx-auto">
+        <section class="container mx-auto pb-24">
             <h2 class="text-5xl font-bold">Woman Jacket</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <div class="p-4 shadow-lg rounded-xl">
@@ -97,7 +97,10 @@
                 </div>
             </div>
         </section>
-        <section class="container mx-auto m-12">
+
+        <!-- Mans Jacket  -->
+
+        <section class="container mx-auto m-12  pb-24">
             <h2 class="text-5xl font-bold">Man Jacket</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-7">
                 <div class="p-4 shadow-lg  rounded-xl">
