--- a/index.html
+++ b/index.html
@@ -144,9 +144,22 @@
                 </div>
             </div>
         </section>
+
+        <!-- Benefits section  -->
+
+        <section>
+            <div class="grid grid-cols-2 gap-7">
+                <div class="h-32 bg-slate-500">1</div>
+                <div class="bg-slate-500 row-span-2">2</div>
+                <div class="h-32 bg-slate-500">3</div>
+            </div>
+        </section>
+
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>Buy from us</p>
+    </footer>
 </body>
 
 </html>
