--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
     </header>
 
-    <main>
+    <main class="bg-penguin">
         <!-- Woman Jacket Section  -->
         <section class="container mx-auto pb-24">
             <h2 class="text-5xl font-bold">Woman Jacket</h2>
@@ -147,11 +147,35 @@
 
         <!-- Benefits section  -->
 
-        <section>
+        <section class="container mx-auto ">
             <div class="grid grid-cols-2 gap-7">
-                <div class="h-32 bg-slate-500">1</div>
-                <div class="bg-slate-500 row-span-2">2</div>
-                <div class="h-32 bg-slate-500">3</div>
+                <div class="rounded-lg flex bg-white p-6 gap-7">
+                    <img class="w-20" src="images/house.png" alt="">
+                    <div>
+                        <h4 class="text-2xl">Find The Perfect Fit</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat totam facilis, voluptatum id magni voluptas.</p>
+                    </div>
+
+                </div>
+                <div class=" row-span-3">
+                    <img src="images/shopping.png" alt="">
+                </div>
+                <div class="rounded-lg flex bg-white p-6 gap-7">
+                    <img class="w-20" src="images/box.png" alt="">
+                    <div>
+                        <h4 class="text-2xl">Find The Perfect Fit</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat totam facilis, voluptatum id magni voluptas.</p>
+                    </div>
+
+                </div>
+                <div class="rounded-lg flex bg-white p-6 gap-7">
+                    <img class="w-20" src="images/question.png" alt="">
+                    <div>
+                        <h4 class="text-2xl">Find The Perfect Fit</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat totam facilis, voluptatum id magni voluptas.</p>
+                    </div>
+
+                </div>
             </div>
         </section>
 
