--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <!-- Benefits section  -->
 
         <section class="container mx-auto ">
-            <div class="grid grid-cols-2 gap-7">
+            <div class="grid md:grid-cols-2 gap-7">
                 <div class="rounded-lg flex bg-white p-6 gap-7">
                     <img class="w-20" src="images/house.png" alt="">
                     <div>
